# datashark-processors-independent

./: README.md  datashark.dist.yml  pyproject.toml  setup.cfg
datashark_processors_independent/: __init__.py  extractor.py  hasher.py  yara.py
