[metadata]
url = https://github.com/koromodako/datashark-processors-independent
author = koromodako
author_email = koromodako@gmail.com
name = datashark-processors-independent
description = Datashark Independent Processors
long_description = file: README.md, LICENSE
keywords = datashark, processors, independent
classifiers =
    Development Status :: 4 - Beta
    Framework :: Datashark
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    aiofiles
    datashark-core

[options.entry_points]
datashark_processors =
    hasher = datashark_processors_independent.hasher:HasherProcessor
    extractor = datashark_processors_independent.extractor:ExtractorProcessor
